--- a/Admin/css/sb-admin-rtl.css
+++ b/Admin/css/sb-admin-rtl.css
@@ -3,3 +3,12 @@
   #wrapper {padding-right: 225px; padding-left: 0;}
   .side-nav{right: 0;left: auto;}
 }
+
+/*Location
+============================*/
+#location{ }
+.map {
+    height: 450px;
+    z-index: 1;
+    width: 100%;
+}
